# ChangeLog for dev-cpp/eigen
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/eigen/ChangeLog,v 1.44 2011/03/25 16:01:28 jlec Exp $

  20 Oct 2013; Honza Macháček <Hloupy.Honza@centrum.cz> eigen-9999.ebuild:
  Avoid creating TeX fonts out of the sandbox.

*eigen-3.1.4 (07 Aug 2013)
*eigen-3.2.0 (07 Aug 2013)

  07 Aug 2013; Sébastien Fabbro <bicatali@gentoo.org> +eigen-3.1.4.ebuild,
  +eigen-3.2.0.ebuild, -eigen-3.1.3-r1.ebuild:
  dev-cpp/eigen: Version bump

*eigen-3.1.3-r1 (29 Apr 2013)

  29 Apr 2013; Sébastien Fabbro <bicatali@gentoo.org> +eigen-3.1.3-r1.ebuild,
  -eigen-3.1.2.ebuild, eigen-9999.ebuild:
  dev-cpp/eigen: Version bump

  12 Dec 2012; Sébastien Fabbro <bicatali@gentoo.org> -eigen-3.1.1-r1.ebuild:
  dev-cpp/eigen: Removed old

*eigen-3.1.2 (19 Nov 2012)

  19 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> +eigen-3.1.2.ebuild,
  -eigen-3.0.6-r1.ebuild, metadata.xml:
  dev-cpp/eigen: Version bump

  25 Oct 2012; Justin Lecher <jlec@gentoo.org> eigen-3.0.6-r1.ebuild,
  eigen-9999.ebuild, metadata.xml:
  Use vcs-snapshot.eclass, correct usage of fortran-2.eclass, some layout
  improvements

*eigen-3.1.1-r1 (26 Jul 2012)

  26 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> +eigen-3.1.1-r1.ebuild,
  -eigen-3.1.0-r1.ebuild, eigen-9999.ebuild:
  dev-cpp/eigen: Version bump. Changed license to MPL-2

*eigen-3.1.0-r1 (09 Jul 2012)
*eigen-3.0.6-r1 (09 Jul 2012)

  09 Jul 2012; Sébastien Fabbro <bicatali@gentoo.org> -eigen-3.0.5.ebuild,
  +eigen-3.0.6-r1.ebuild, -eigen-3.1.0.ebuild, +eigen-3.1.0-r1.ebuild,
  eigen-9999.ebuild, metadata.xml:
  now can really build for tests, remove lapack (not yet complete). Revision
  bump to avoid possible conflict with main tree. Merge 3.1 and live ebuild

*eigen-3.1.0 (29 Jun 2012)

  29 Jun 2012; Sebastien Fabbro <fabbros@gentoo.org> -eigen-3.0.4.ebuild,
  -eigen-3.1.0_alpha2.ebuild, +eigen-3.1.0.ebuild: